# gpmpe

./: .config.example  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LOCAL-PLAN.mk  PLAN.md  README.md  docker-compose.yml  start-project.sh  start.sh  stop.sh
aws/: ecs-task-definition.template.json  setup-cognito-alb-auth.sh
backend/: pyproject.toml
backend/app/: chat.py  config.py  data_sync.py  db.py  dependencies.py  git_store.py  llm.py  main.py  middleware.py  models.py  renderer.py  schemas.py  yaml_store.py
backend/app/routes/: admin_settings.py  artifacts.py  auth.py  business_campaigns.py  chat.py  components.py  data_manager.py  offers_assets.py  ops.py  templates.py
backend/app/services/: __init__.py  auth.py  business_import.py  data_manager.py  runtime_settings.py  secret_store.py  yaml_persistence.py
backend/schemas/: 001_init.sql  002_artifacts.sql  004_campaign_components.sql  005_footnotes.sql  006_renderer_externalization.sql
backend/scripts/: git_sync_worker.sh  local_parity_check.py
backend/tests/: conftest.py  test_admin_settings.py  test_auth.py  test_business_campaign.py  test_business_import.py  test_campaign_clone.py  test_chat_edit.py  test_config.py  test_data_sync.py  test_db.py  test_efs_storage_parity.py  test_git_store.py  test_git_sync_flow.py  test_gui_mutation_api.py  test_health.py  test_llm.py  test_promotion_composition.py  test_renderer.py  test_security_hardening.py
docs/: AWS_DEPLOYMENT_RUNBOOK.md  AWS_MIGRATION_PLAN.md  AWS_STAGING_DEPLOYMENT_EXAMPLE.md  DESIGN.md  GAP_REPORT.md  OPEN_SOURCE_PLAN.md  (+3 more)
(+72 files in other folders)
