[project]
name = "gpmpe-backend"
version = "0.1.0"
description = "Backend API for GPMPE"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "openai>=1.0,<2.0",
  "fpdf2>=2.8,<3.0",
  "Pillow>=11.0,<12.0",
  "PyYAML>=6.0.2,<7.0.0",
  "reportlab>=4.0,<5.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg2-binary>=2.9.0",
  "mysql-connector-python>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--basetemp=../.test-output/pytest"]
